--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "md5": "^2.3.0",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/md5": "^2.3.5",
     "@types/node": "^22.10.10",
+    "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
