--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
@@ -16,7 +24,9 @@
     "express": "^4.21.2",
     "md5": "^2.3.0",
     "mongoose": "^8.9.5",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -24,6 +34,7 @@
     "@types/md5": "^2.3.5",
     "@types/node": "^22.10.10",
     "@types/nodemailer": "^6.4.17",
+    "@types/rimraf": "^3.0.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
